@@ -1,5 +1,9 @@
 apt (0.9.6.1) UNRELEASED; urgency=low
 
+  [ Daniel Hartwig ]
+  * apt-pkg/pkgcachegen.cc:
+    - always reset _error->StackCount in MakeStatusCache (Closes: #677175)
+
   [ David Kalnischkies ]
   * apt-pkg/deb/deblistparser.cc:
     - ensure that mixed positive/negative architecture wildcards
